# sre-backend-arena

./: CLAUDE.md  FASTAPI.md  KOTLIN.md  NESTJS.md  README.md  VAGA.md
load-tests/: .gitignore  Makefile  locustfile.py  pyproject.toml
sre-arena-deathstar/: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  validate-submission.sh
sre-arena-deathstar/.github/workflows/: ci-cd.yml
sre-arena-deathstar/k8s/: deploy.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
sre-arena-deathstar/nginx/: nginx.conf
sre-arena-deathstar/src/: main.py
sre-arena-deathstar/src/api/routes/: deathstar.py  health.py
sre-arena-deathstar/src/api/schemas/: ship_analysis.py
sre-arena-deathstar/src/config/: settings.py
sre-arena-deathstar/src/middleware/: error_handler.py  logging.py
sre-arena-deathstar/src/monitoring/: datadog_agent.py  distributed_tracing.py  prometheus.py
sre-arena-deathstar/src/observability/: logging.py  metrics.py  tracing.py
sre-arena-deathstar/src/resilience/: bulkhead.py  circuit_breaker.py  rate_limiter.py  retry.py
sre-arena-deathstar/src/services/: cache_service.py  external_api_service.py  ship_service.py
sre-arena-deathstar/terraform/datadog/: slo.tf  variables.tf
sre-arena-deathstar/terraform/k8s/: deployment.tf
sre-arena-deathstar/tests/: conftest.py  test_cache_service.py  test_deathstar.py  test_health.py  test_resilience.py  test_ship_service.py
sre-arena-pokemon/: .gitignore  Dockerfile  Makefile  docker-compose.yml  jest.config.js  package.json  validate-submission.sh
sre-arena-pokemon/.github/workflows/: ci-cd.yml
sre-arena-pokemon/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
sre-arena-pokemon/src/: app.module.ts  main.ts  tracing.ts
sre-arena-pokemon/src/battle/: battle.controller.ts  battle.module.ts  battle.service.ts
sre-arena-pokemon/src/cache/: cache.service.ts
sre-arena-pokemon/src/config/: schema.ts
sre-arena-pokemon/src/external-api/: external-api.service.ts
sre-arena-pokemon/src/health/: health.controller.ts
sre-arena-pokemon/src/logging/: logging.interceptor.ts
sre-arena-pokemon/src/metrics/: metrics.service.ts
sre-arena-pokemon/src/pokemon/: pokemon.module.ts  (+1 more)
sre-arena-pokemon/test/: battle.e2e-spec.ts
sre-arena-wizard/: .gitignore  Dockerfile  Makefile  build.gradle.kts  docker-compose.yml  settings.gradle.kts  validate-submission.sh
sre-arena-wizard/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
(+23 files in other folders)
