[tool.poetry]
name = "sre-arena-load-tests"
version = "0.1.0"
description = "Load tests for SRE Backend Arena — Locust"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Locust / pytest-style config não é necessário aqui, mas deixamos
# um bloco de referência para facilitar scripts.
# ---------------------------------------------------------------------------

# Exemplos de uso (ver Makefile):
#   make deathstar   SCENARIO=deathstar --host http://localhost:8000
#   make wizard      SCENARIO=wizard    --host http://localhost:8080
#   make pokemon     SCENARIO=pokemon   --host http://localhost:3000
