[tool.poetry]
name = "sre-arena-deathstar"
version = "0.1.0"
description = "SRE Arena Deathstar Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/your-username/sre-arena-deathstar"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = { version = "0.27.0", extras = ["standard"] }
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
httpx = "0.26.0"
cachetools = "5.3.2"
ddtrace = "2.5.0"
datadog = "0.49.0"
structlog = "24.1.0"
python-json-logger = "2.0.7"
prometheus-client = "0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-cov = "4.1.0"
pytest-asyncio = "0.23.3"
black = "23.12.1"
flake8 = "7.0.0"
mypy = "1.8.0"
pre-commit = "3.6.0"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Configurações de Ferramentas ---

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", ".venv/"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]